static/css/custom.css
@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap');
body {
  font-family: "Ubuntu Sans", sans-serif;
}

section .bg-light code, section .bg-light pre {
  background-color: #eee;
  font-weight: 300;
  color: brown;
}

.btn-secondary {
  background-color: rgba(150, 150, 150, 0.7) !important;
  border-color: #ddd !important;
}

.jumbotron {
  padding: 0rem 0rem;
}

.filter-layer {
  width: 100%;
  height: 100%;
  backdrop-filter: brightness(0.45) hue-rotate(-10deg);
  -webkit-backdrop-filter: brightness(0.45) hue-rotate(-10deg);
  padding: 4rem 2rem;
}

nav {
  box-shadow: 0px 1px 10px rgba(0,0,0,0.1);
}

/* Remove subtitle container on regular pages */
section .subtitle-container {
  height: 0px;
}

h1 {
  font-size: 2.2em;
  font-weight: bold;
}

h2 {
  font-size: 1.7em;
}

h4 {
  margin-top: 30px;
  margin-bottom: 15px;
  font-size: 1.3em;
  color: brown;
}

/* unvisited link */
 h2 a:link {
   color: white;
 }

 /* visited link */
 h2 a:visited {
   color: white;
   text-decoration: underline;
 }

 /* mouse over link */
 h2 a:hover {
   color: teal;
   text-decoration: underline;
 }

 /* selected link */
 h2 a:active {
   color: teal;
   text-decoration: underline;
 }

 /* unvisited link */
 article a:link {
   color: teal;
   text-decoration: underline;
 }

 /* visited link */
 article a:visited {
   color: teal;
   text-decoration: underline;
 }

 /* mouse over link */
 article a:hover {
   color: teal;
   text-decoration: underline;
 }

 /* selected link */
 article a:active {
   color: teal;
   text-decoration: underline;
 }

 div.dropdown-menu {
   background-color: #343538
 }

